Fix padding on input-wrap

--- a/assets/css/small-groups.css
+++ b/assets/css/small-groups.css
@@ -1,1 +1,2 @@
+.small-groups .input-wrap{margin:5px 0;}
 .small-groups .invalid-field{color: rgb(235,77,77);font-size:0.8em;font-weight: normal;}
